# rag-document-converter

./: .env.example  LICENSE  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
config/: default_config.yaml  entity-config.md  entity-config.yaml  entity_patterns.yaml
documents/: entity-categories.md  project-description.md  project-structure.yaml  rag-document-instructions.md
raft/: process-all-rpg-files.ps1  process-all-rpg-files.sh  raft_training_data_gen.py
rag_converter/: cli.py  config.py  converter.py
rag_converter/assembler/: __init__.py  document_assembler.py  footer_generator.py  notes_generator.py
rag_converter/llm/: __init__.py  client.py  entity_enhancer.py  relationship_enhancer.py  summarizer.py
rag_converter/optimizer/: __init__.py  document_optimizer.py  entity_identifier.py  relationship_extractor.py  section_summarizer.py  vocabulary_controller.py
rag_converter/parser/: __init__.py  document_notes_parser.py  document_parser.py  entity_parser.py  section_parser.py  yaml_parser.py
rag_converter/utils/: __init__.py  file_utils.py  logging_utils.py  string_utils.py  yaml_utils.py
